name:    smt-lib
version: 0.0.2

category: Language

synopsis: Parsing and printing SMT-LIB.

description:
  SMT-LIB is a common language used by many SMT solvers.
  This library provides an SMT-LIB AST with parsing and printing utilities.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Custom
cabal-version: >= 1.6

extra-source-files:
  AutoAST.hs

library
    build-depends:
        base       >= 4.0 && < 5.0,
        directory  >= 1.0 && < 1.1,
        array      >= 0.3 && < 0.4,
        polyparse  >= 1.4

    exposed-modules:
        Language.SMTLIB
        Language.SMTLIB.Lexer
        Language.SMTLIB.Version12

    ghc-options: -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/smt-lib.git

