name:    smt-lib
version: 0.0.4

category: Language

synopsis: Parsing and printing SMT-LIB.

description:
  SMT-LIB is a common language used by many SMT solvers.
  This library provides an SMT-LIB AST with parsing and printing utilities.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.6

extra-source-files:

library
    build-depends:
        base      < 5 ,
        directory ,
        array     ,
        polyparse ,
        wl-pprint

    exposed-modules:
        Language.SMTLIB
        Language.SMTLIB.Lexer

    ghc-options: -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/smt-lib.git

